# tradingApp

./: .dockerignore  .gitignore  ADVANCED_FEATURES_GUIDE.md  COMPREHENSIVE_PANDAS_TA_FIXES.md  COMPREHENSIVE_TEST_RESULTS.md  Dockerfile  ENHANCEMENT_SUMMARY.md  EXECUTION_SUMMARY.md  FIX_SUMMARY.md  FUTURE_ML_ENHANCEMENTS.md  GEMINI.md  GYM_FIX_SUMMARY.md  MODEL_CLEANUP_SUMMARY.md  Makefile  OPTIMIZATION_ANALYSIS_SUMMARY.md  PANDAS_TA_FIXES_SUMMARY.md  QWEN.md  README.md  USAGE.md  VIEW_CLEANUP_SUMMARY.md  WARP.md  algorithm_research.py  auto_login.py  config.ini  docker-compose.yml  enhanced_hyper.py  enhanced_market_data.py  enhanced_performance.py  enhanced_security.py  enhanced_tournaments.py  hyper.py  init.sql  install_deps.py  launch_advanced.py  main.py  market_data_integration.py  multi_agent_tournaments.py  overall_trading_results.csv  posix.py  predict_tester.py  (+21 more)
backup_old_env/: env2.py  env_uttils.py  trading_env.py
data/ml/: mltrained_modelDecisionTreeClassifier(max_depth=10, min_samples_split=5)-0.83.pkl  mltrained_modelDecisionTreeClassifier(max_depth=10, min_samples_split=5)-0.86.pkl  mltrained_modelExtraTreeClassifier(max_depth=10)-0.8.pkl  mltrained_modelGradientBoostingClassifier(max_depth=2, n_estimators=200)-0.86.pkl  trained_DecisionTreeClassifier-1.0.pkl  trained_LinearRegression-0.8453577352062279.pkl  trained_LinearRegression-0.8913055140833581.pkl  trained_LinearRegression-0.9379221336293705.pkl  trained_LinearRegression-0.9486368267527819.pkl  trained_LogisticRegression-0.9855072463768116.pkl  trained_LogisticRegression-0.9894736842105263.pkl  trained_SVC-1.0.pkl  trained_SVR-0.9098980439302904.pkl  trained_SVR-0.9545027054026584.pkl  trained_modelDecisionTreeClassifier(criterion='entropy', max_depth=10)-0.83.pkl  trained_modelDecisionTreeClassifier(criterion='entropy', max_depth=10)-0.93.pkl  trained_modelDecisionTreeClassifier(criterion='entropy', max_depth=10)-0.95.pkl  trained_modelDecisionTreeClassifier(criterion='entropy', max_depth=10, min_samples_leaf=2)-0.92.pkl  trained_modelDecisionTreeClassifier(criterion='entropy', max_depth=10, min_samples_leaf=3)-0.94.pkl  trained_modelDecisionTreeClassifier(max_depth=10)-0.91.pkl  trained_modelDecisionTreeClassifier(max_depth=10)-0.99.pkl  trained_modelDecisionTreeClassifier(max_depth=10, min_samples_leaf=2)-0.94.pkl  trained_modelDecisionTreeClassifier(max_depth=10, min_samples_leaf=2, min_samples_split=5)-0.94.pkl  trained_modelDecisionTreeClassifier(max_depth=10, min_samples_leaf=3, min_samples_split=5)-0.86.pkl  trained_modelDecisionTreeClassifier(max_depth=10, min_samples_leaf=3, min_samples_split=5)-0.93.pkl  trained_modelDecisionTreeClassifier(max_depth=10, min_samples_leaf=5, min_samples_split=10)-0.8.pkl  trained_modelDecisionTreeClassifier(max_depth=10, min_samples_split=5)-0.89.pkl  trained_modelDecisionTreeClassifier(max_depth=3)-0.76.pkl  trained_modelDecisionTreeClassifier(max_depth=5, min_samples_leaf=2)-0.9.pkl  trained_modelExtraTreeClassifier(max_depth=10, min_samples_leaf=2)-0.79.pkl  trained_modelGradientBoostingClassifier(learning_rate=0.01, max_depth=4, n_estimators=300)-0.86.pkl  trained_modelLogisticRegression(C=0.1, max_iter=50, penalty='none', solver='newton-cg')-0.76.pkl  trained_modelMLPClassifier(alpha=0.1, hidden_layer_sizes=(20,))-0.73.pkl  trained_modelMLPClassifier(alpha=1.0, hidden_layer_sizes=(10, 10))-0.74.pkl  trained_modelRandomForestClassifier(max_depth=10, min_samples_split=6, n_estimators=50)-0.88.pkl  trained_modelSVC(C=10.0, degree=2, gamma='auto')-0.77.pkl  trained_modelSVC(C=10.0, degree=2, gamma='auto')-0.8.pkl
data/pickle/: 1h.p  2h.p  30m.p
docs/: ADVANCED_BOT_SYSTEM_SUMMARY.md  ENVIRONMENT_REFACTORING.md  FINAL_ERROR_RESOLUTION_SUMMARY.md  ML_CLEANUP_SUMMARY.md  ML_RL_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  architecture.md  security.md  setup.md  utilities.md
examples/: README.md
examples/advanced_features/: algorithm_switching.py  icm_exploration.py
examples/basic_usage/: dqn_example.py  ppo_example.py
examples/trading_scenarios/: multi_asset_portfolio.py
model/: autobot.py  base_model.py  bot_system.py  exampletab.py  features.py  machinelearning.py  models.py  models_optimized.py  models_original_backup.py  nnlmodel.py  refactored_models.py  t_autobot.py  trading.py
model/machinelearning/: README_ADVANCED.md  __init__.py  autobot.py  machinelearning.py  ml_advanced.py  ml_config.py  ml_integration.py  ml_models.py  ml_util.py  ml_utils_advanced.py  t_autobot.py
model/manualtrading/: trading.py
model/ml_system/: __init__.py
model/reinforcement/: IMPLEMENTATION_COMPLETE.md  README.md  __init__.py  agent.py  agent2.py  agent_extra.py  comment.txt  enhanced_integration.py  env.py  indicators.py  model_selector.py  rl_models.py  rl_util.py  rl_visual.py  test_integration.py  (+1 more)
notebooks/: testname.ipynb  trade_x.ipynb
rl_experiments/: experiment_20250909_235835.json
test/: base_test.py  quick_test.py  run_enhanced_tests.py  run_refactored_tests.py  run_tests.py  test.py  test_advanced_features.py  test_autobot.py  test_db_optimizations.py  test_env.py  test_integration.py  test_ml_models.py  test_multenv.py  test_performance.py  test_refactored_components.py  test_rl_algorithms.py  test_rl_system.py  test_rl_training.py  test_tradex.py  test_tradingenv.py  test_view.py  validate_enhanced_testing.py
trading/: __init__.py
util/: agent_utils.py  async_client.py  async_trading.py  cache.py  candlestick_parser.py  config_manager.py  db_pool.py  error_handling.py  loggers.py  ml_models.py  ml_optimization.py  ml_util.py  parallel.py  rl_util.py  secure_config.py  secure_credentials.py  standardized_loggers.py  utils.py  validation.py  websocket_util.py
view/: advanced_rl_system_tab.py  bottab.py  bottab_optimized.py  charttab.py  charttab_optimized.py  exampletab.py  exchangetab.py  exchangetab_optimized.py  ml_system_tab.py  mltab.py  mltab_optimized.py  modern_trading_tab.py  refactored_views.py  rl_system_tab.py  rltab.py  rltab_optimized.py  tradetab.py  trading_system_tab.py  utils.py  views.py  views_optimized.py
(+189 files in other folders)
